Fix playground text overflowing

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -285,7 +285,7 @@ textarea {
 }
 
 .snippet-output {
-  white-space: pre;
+  white-space: pre-wrap;
   padding: 10px;
   border-top: 3px solid #00000030;
 }
